base/networking/virtual-service.yaml
# Base VirtualService Template for Frontend Application
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-route
spec:
  hosts:
    - "*" # Patch later
  gateways:
    - istio-gateway
  http:
    # Define standard routes to local services (simplest default)
    - match: [{ uri: { prefix: /api/users } }]
      route:
        [{ destination: { host: user-service-svc, port: { number: 8081 } } }]
    - match: [{ uri: { prefix: /api/events } }]
      route:
        [{ destination: { host: event-service-svc, port: { number: 8082 } } }]
    - match: [{ uri: { prefix: /api/bookings } }]
      route:
        [{ destination: { host: booking-service-svc, port: { number: 8083 } } }]
    - match: [{ uri: { prefix: /api/tickets } }]
      route:
        [
          {
            destination:
              { host: ticketing-service-svc, port: { number: 8084 } },
          },
        ]
    - match: [{ uri: { prefix: /api/notifications } }]
      route:
        [
          {
            destination:
              { host: notification-service-svc, port: { number: 8085 } },
          },
        ]
    - match: [{ uri: { prefix: /api/audits } }]
      route:
        [{ destination: { host: audit-service-svc, port: { number: 8086 } } }]
    - match: [{ uri: { prefix: / } }]
      route: [{ destination: { host: frontend-svc, port: { number: 80 } } }]
